--- a/movies/templates/index.html.twig
+++ b/movies/templates/index.html.twig
@@ -1,8 +1,31 @@
-<h1>
+{# <h1>
   {{ dump(title) }}
 </h1>
 {% if title %}
   <p>{{title}} is a movie</p>
 {% else %}
   <p>Whoops, no title has been set.</p>
-{% endif %}
+{% endif %} #}
+
+{% extends "base.html.twig" %}
+
+{% block title %}
+  Movies Page
+{% endblock %}
+
+{% block body %}
+  {# <h1>{{title}}</h1> #}
+  {# 
+  <ul>
+    {% for movie in movies %}
+      <li>{{ movie }}</li>       
+    {% endfor %}
+  </ul>
+  {{ _self }}
+  {{ _charset }}
+  {{ author }}
+  #}
+
+  <h1>WOOHOO!</h1>
+
+{% endblock %}
