added get and create movie

--- a/movies/templates/index.html.twig
+++ b/movies/templates/index.html.twig
@@ -26,6 +26,7 @@
   {{ author }}
   #}
 
-  <h1>WOOHOO!</h1>
+  <h1 class="bg-blue-500 text-2xl text-center font-bold">WOOHOO!</h1>
+  <img src="{{ asset('build/images/image1.jpg')}}" alt="">
 
 {% endblock %}
