--- a/movies/assets/styles/app.css
+++ b/movies/assets/styles/app.css
@@ -1,7 +1,5 @@
-body {
-    background-color: lightgray;
-}
+@tailwind base;
 
-h1 {
-  font-size: 3rem;
-}
+@tailwind components;
+
+@tailwind utilities;
